<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2022
    SPDX-License-Identifier: Apache-2.0
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Crooked Android -->
    <string name="crookedsettings_title" translatable="false">Crooked Settings</string>

    <!-- Categories -->
    <string name="themes_title">Themes</string>
    <string name="lockscreen_title">Lock screen</string>
    <string name="statusbar_title">Status bar</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="notifications_title">Notifications</string>
    <string name="gestures_title">Gestures</string>
    <string name="misc_title">Miscellaneous</string>

    <!-- General strings -->
    <string name="default_string">Default</string>
    <string name="disabled">Disabled</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>

</resources>
